packages/next-swc/crates/core/tests/errors/next-dynamic/too-many-arguments/output.js
import dynamic from 'neer/dynamic'

const DynamicComponentWithCustomLoading = dynamic(
  () => import('../components/hello'),
  { loading: () => <p>...</p> },
  "3rd"
)
